--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -24,21 +24,19 @@
 			<key>Type</key>
 			<string>PSMultiValueSpecifier</string>
 			<key>DefaultValue</key>
-			<string>online</string>
+			<integer>1</integer>
 			<key>Title</key>
 			<string>Mode</string>
 			<key>Key</key>
 			<string>mode</string>
 			<key>Values</key>
 			<array>
-				<string>onlinenocache</string>
-				<string>online</string>
-				<string>offline</string>
+				<integer>1</integer>
+				<integer>2</integer>
 			</array>
 			<key>Titles</key>
 			<array>
-				<string>Online, no cache</string>
-				<string>Online, with cache</string>
+				<string>Online</string>
 				<string>Offline</string>
 			</array>
 		</dict>
@@ -46,21 +44,19 @@
 			<key>Key</key>
 			<string>cachesizemax</string>
 			<key>DefaultValue</key>
-			<string>0.5</string>
+			<real>0.5</real>
 			<key>Type</key>
 			<string>PSMultiValueSpecifier</string>
 			<key>Title</key>
 			<string>Max cache size</string>
 			<key>Values</key>
 			<array>
-				<string>0.5</string>
-				<string>1</string>
-				<string>2</string>
-				<string>5</string>
-				<string>10</string>
-				<string>20</string>
-				<string>40</string>
-				<string>60</string>
+				<real>0.5</real>
+				<integer>1</integer>
+				<integer>2</integer>
+				<integer>5</integer>
+				<integer>10</integer>
+				<integer>500</integer>
 			</array>
 			<key>Titles</key>
 			<array>
@@ -69,9 +65,7 @@
 				<string>2 GB</string>
 				<string>5 GB</string>
 				<string>10 GB</string>
-				<string>20 GB</string>
-				<string>40 GB</string>
-				<string>60 GB</string>
+				<string>No limit</string>
 			</array>
 		</dict>
 		<dict>
