--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -80,7 +80,7 @@
 		</dict>
 		<dict>
 			<key>FooterText</key>
-			<string>ZotPad will preemptively retrieve item data and attachments in the background. Adjusting these settings will affect how much bandwidth and disk space is used for this process. </string>
+			<string>ZotPad will preemptively retrieve item data and attachments in the background. Adjusting these settings will affect how much bandwidth and disk space are used for this process. </string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
