Added build target for beta version and new AppIcons

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -133,6 +133,93 @@
 			</array>
 		</dict>
 		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>File download and upload channnels</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Zotero storage</string>
+			<key>Key</key>
+			<string>zoterostorage</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+			<key>Title</key>
+			<string>Configure Zotero Storage</string>
+			<key>DefaultValue</key>
+			<string>Configured automatically</string>
+			<key>Key</key>
+			<string>zoterostorageconfiguration</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>WebDAV</string>
+			<key>Key</key>
+			<string>webdav</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+			<key>Title</key>
+			<string>Configure WebDAV</string>
+			<key>Key</key>
+			<string>File</string>
+			<key>File</key>
+			<string>WebDAV</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>DropBox</string>
+			<key>Key</key>
+			<string>dropbox</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSTitleValueSpecifier</string>
+			<key>Title</key>
+			<string>Configure DropBox</string>
+			<key>DefaultValue</key>
+			<string>Configured automatically</string>
+			<key>Key</key>
+			<string>dropboxconfiguration</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Local network share</string>
+			<key>Key</key>
+			<string>samba</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+			<key>Title</key>
+			<string>Configure local network share</string>
+			<key>Key</key>
+			<string>File</string>
+			<key>File</key>
+			<string>samba</string>
+		</dict>
+
+		<dict>
 			<key>FooterText</key>
 			<string>These preferences will reset ZotPad data when it is next started.</string>
 			<key>Type</key>
