--- a/Settings.bundle/DropBox.plist
+++ b/Settings.bundle/DropBox.plist
@@ -8,17 +8,19 @@
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
-			<string>URL</string>
+			<string>Path of storage folder</string>
 			<key>Key</key>
-			<string>sambaurl</string>
+			<string>dropboxpath</string>
 		</dict>
 		<dict>
 			<key>Type</key>
-			<string>PSTextFieldSpecifier</string>
+			<string>PSTitleValueSpecifier</string>
 			<key>Title</key>
 			<string>Username</string>
 			<key>Key</key>
-			<string>sambausername</string>
+			<string>dropboxusername</string>
+			<key>DefaultValue</key>
+			<string>Will be asked later</string>
 		</dict>
 		<dict>
 			<key>Type</key>
@@ -26,7 +28,7 @@
 			<key>Title</key>
 			<string>Password</string>
 			<key>Key</key>
-			<string>sambapassword</string>
+			<string>dropboxpassword</string>
 			<key>DefaultValue</key>
 			<string>Will be asked later</string>
 		</dict>
