Working on the iPhone version

--- a/ZotPad beta-Info.plist
+++ b/ZotPad beta-Info.plist
@@ -35,6 +35,7 @@
 				<string>Default.png</string>
 				<string>Default-Portrait@2x~ipad.png</string>
 				<string>Default-Landscape@2x~ipad.png</string>
+				<string>Default-Landscape@2x~ipad.png</string>
 			</array>
 		</dict>
 	</dict>
