--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "fmdb"]
-	path = fmdb
-	url = https://github.com/ccgus/fmdb.git
 [submodule "FMDB"]
 	path = FMDB
-	url = https://github.com/ccgus/fmdb.git
+	url = https://github.com/mronkko/fmdb.git
 [submodule "Three20"]
 	path = Three20
 	url = https://github.com/facebook/three20.git
@@ -28,6 +25,3 @@
 [submodule "Oxygen-Icons"]
 	path = Oxygen-Icons
 	url = https://github.com/chadnickbok/Oxygen-Icons.git
-[submodule "SVGKit"]
-	path = SVGKit
-	url = https://github.com/reklis/SVGKit.git
