--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,7 @@
 [submodule "DTCoreText"]
 	path = DTCoreText
 	url = https://github.com/Cocoanetics/DTCoreText.git
+
+[submodule "EGOTableViewPullRefresh"]
+	path = EGOTableViewPullRefresh
+	url = https://github.com/enormego/EGOTableViewPullRefresh.git
