--- a/.gitmodules
+++ b/.gitmodules
@@ -25,6 +25,9 @@
 [submodule "DTCoreText"]
 	path = DTCoreText
 	url = https://github.com/Cocoanetics/DTCoreText.git
-[submodule "EGOTableViewPullRefresh"]
-	path = EGOTableViewPullRefresh
-	url = https://github.com/enormego/EGOTableViewPullRefresh.git
+[submodule "RBFilePreviewer"]
+	path = RBFilePreviewer
+	url = https://github.com/rob-brown/RBFilePreviewer
+[submodule "RBCategories"]
+	path = RBCategories
+	url = https://github.com/rob-brown/RBCategories
