--- a/ZotPad/ZotPad-Info.plist
+++ b/ZotPad/ZotPad-Info.plist
@@ -16,6 +16,14 @@
 			<array>
 				<string>AppIcon144x144.png</string>
 				<string>AppIcon72x72.png</string>
+				<string>AppIcon57x57.png</string>
+				<string>AppIcon114x114.png</string>
+				<string>Default.png</string>
+				<string>Default@2x.png</string>
+				<string>Default-Portrait~ipad.png</string>
+				<string>Default-Portrait@2x~ipad.png</string>
+				<string>Default-Landscape@2x~ipad.png</string>
+				<string>Default-Landscape~ipad.png</string>
 			</array>
 		</dict>
 	</dict>
@@ -59,6 +67,17 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.item</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
