--- a/ZotPad beta-Info.plist
+++ b/ZotPad beta-Info.plist
@@ -59,9 +59,17 @@
 				<string>db-or7xa2bxhzit1ws</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>db-w1nps3e4js2va7z</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.1.160</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
