Refactoring notes and attachments as independent classes and not subclasses of item

--- a/ZotPad beta copy-Info.plist
+++ b/ZotPad beta copy-Info.plist
@@ -48,7 +48,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.mronkko.zotpad-beta</string>
+	<string>com.yourcompany.PDFAnnotationSample</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -77,7 +77,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.2.740</string>
+	<string>1.2.666</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
