Pulled all submodules and added CSLProcessor as dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "CoconutKit"]
 	path = CoconutKit
 	url = https://github.com/defagos/CoconutKit.git
+[submodule "CSLProcessor"]
+	path = CSLProcessor
+	url = https://github.com/mronkko/CSLProcessor
